<resources>
    <string name="app_name">MyContacts</string>
    <string name="search">Search contacts</string>
    <string name="no_contact">No contacts. Please add</string>
    <string name="add_contact">Add contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="phone">Phone number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="remove_contact">Remove</string>
</resources>